REG-82 fix overflowing bar charts & style errors

--- a/src/encoded/static/scss/encoded/modules/_regulome_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_regulome_search.scss
@@ -256,6 +256,7 @@ dl.key-value {
         }
         h4 {
             font-size: 1.2rem;
+            line-height: normal;
             font-weight: normal;
             text-transform: uppercase;
             padding-top: 10px;
